--- a/my-project/package.json
+++ b/my-project/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "axios": "^0.19.0",
+        "echarts": "^4.2.1",
         "mint-ui": "^2.2.13",
         "video.js": "^7.6.0",
         "vue": "^2.5.2",
